Invariant failure at OCSPManager::requestStatus

XMLWordPrintableJSON

    • Fully Compatible
    • ALL
    • v5.0, v4.4, v4.2, v4.0
    • Security 2021-05-31, Security 2021-06-14
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      {"t":{"$date":"2021-05-19T20:12:37.919+00:00"},"s":"F",  "c":"-",        "id":23079,   "ctx":"OCSPManagerHTTP-0","msg":"Invariant failure","attr":{"expr":"swHandle.isOK()","file":"src/mongo/util/net/http_client_curl.cpp","line":545}}
      

            Assignee:
            Mark Benvenuto
            Reporter:
            Dmitry Agranat
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: