SERVER-57145 Invariant failure at OCSPManager::requestStatus

(cherry picked from commit ae045f190511f6830f2172d5e7c5be63a20478be)